fixed spacing and increased font size in index

--- a/style.css
+++ b/style.css
@@ -13,3 +13,7 @@ h1, h2 {
 .center {
     text-align: center;
 }
+
+p {
+    font-size: x-large;
+}
